--- a/pages/language/c/Cocos2dx.textile
+++ b/pages/language/c/Cocos2dx.textile
@@ -75,43 +75,68 @@ if (preScene == null) {                                             // 如果当
     <h3><small>4.1</small> 动作</h3>
 
     <p>@CCAction@ ：动作，分为瞬时动作 @CCActionInstanse@ ，延时动作 @CCActionInterval@</p>
+
+table(table table-bordered).
+|_.动作|_.说明|_.构造 @CCActionInterval@|_.参数说明|
+|@CCMoveTo@|移动到目标位置|@CCMoveTo::actionWithDuration(2, ccp(100, 100))@|时间，位置|
+|@CCMoveBy@|从目标位置移动|@CCMoveBy::actionWithDuration(2, ccp(100, 100))@|时间，位置|
+|@CCScaleTo@|缩放至多少倍|@CCScaleTo::actionWithDuration(2, 0.5f)@|时间，倍数（x、Y柚同时缩放）|
+|@CCScaleBy@|放大至多少倍|@CCScaleBy::actionWithDuration(2, 2f, 3f)@|时间，x柚放大倍数，Y柚放大倍数|
+|@CCRotateTo@|旋转多少角度|@CCRotateTo::actionWithDuration(2, 45f)@|时间，角度（正数顺时间，负数逆时针）|
+|@CCRotateBy@|旋转多少角度|@CCRotateBy::actionWithDuration(2, 360f)@|时间，角度（正数顺时间，负数逆时针）|
+|@CCSkewTo@|倾斜|@CCSkewTo::actionWithDuration(2, 37.2f, -37.2f)@|时间，X柚倾斜角度，Y柚倾斜角度|
+|@CCSkewBy@|倾斜|@CCSkewBy::actionWithDuration(2, 37.2f, -37.2f)@|时间，X柚倾斜角度，Y柚倾斜角度|
+|@CCJumpTo@|跳跃|@CCJumpTo::actionWithDuration(2, ccp(300,300), 50, 4)@|时间，目标坐标，跳的高度，跳的次数|
+|@CCJumpBy@|跳跃|@CCJumpBy::actionWithDuration(2, ccp(300,300), 50, 4)@|时间，目标坐标，跳的高度，跳的次数|
+|@CCBezierTo@|贝塞尔曲线运行|@CCBezierTo::actionWithDuration(3, bezier)@|时间， @ccBezierConfig@<sup><a href="javascript:void(0);" rel="popover" data-content="<pre>ccBezierConfig bezier;
+bezier.controlPoint_1 = ccp(0, s.height/2);
+bezier.controlPoint_2 = ccp(300, -s.height/2);
+bezier.endPosition = ccp(300,100);</pre>" data-original-title="ccBezierConfig">注</a></sup> 结构体|
+|@CCBezierBy@|贝塞尔曲线运行|@CCBezierBy::actionWithDuration(3, bezier)@|时间， @ccBezierConfig@ 结构体|
+|@CCBlink@|闪|@CCBlink::actionWithDuration(2, 10)@|时间，次数|
+|@CCFadeIn@|淡入|@CCFadeIn::actionWithDuration(1.0f)@|时间|
+|@CCFadeOut@|淡出|@CCFadeOut::actionWithDuration(1.0f)@|时间|
+|@CCTintTo@|颜色变化|@CCTintTo::actionWithDuration(2, 255, 0, 255)@|时间，红，绿，蓝|
+|@CCTintBy@|颜色变化|@CCTintBy::actionWithDuration(2, 255, 0, 255)@|时间，红，绿，蓝|
+|@CCAnimate@|动画|@CCAnimate::actionWithDuration(3, animation, false)@|时间， @CCAnimation@<sup><a href="javascript:void(0);" rel="popover" data-content='<pre>CCAnimation* animation = CCAnimation::animation();
+char frameName[100] = {0};
+for(int i=1;i<15;i++) {
+    sprintf(frameName, "Images/grossini_dance_%02d.png", i);
+    animation->addFrameWithFileName(frameName);
+}</pre>' data-original-title="CCAnimation">注</a></sup>，是否恢复原始帧|
+
+table(table table-bordered).
+|_.动作组合方式|_.说明|_.构造 @CCAction@|_.参数|
+|@CCSequence@|动作序列，有序地一个一个执行动作|@CCSequence::actions(actionTo, actionToBack, NULL)@|动作1、运作2、...、后面必须加NULL表示没有了|
+|@CCRepeatForever@|重复执行动作|@CCRepeatForever::actionWithAction(actionTo)@|动作|
+|@CCSpawn@|同时执行动作|@CCSpawn::actions(actionTo, actionToBack, NULL)@|动作1、运作2、...、后面必须加NULL表示没有了|
+
+table(table table-bordered).
+|_.动作回调|_.说明|_.构造|_.参数|
+|@CCCallFunc@|不带参数的回调|@CCCallFunc::actionWithTarget(this, callfunc_selector(Class::callback1))@|当前动作，回调函数<sup><a href="javascript:void(0);" rel="popover" data-content='<pre>
+void Class::callback1()
+{
+    
+}
+</pre>' data-placement="left" data-original-title="Class::callback1">注</a></sup>|
+|@CCCallFuncN@|不带参数但带调用本身|@CCCallFuncN::actionWithTarget(this, callfuncN_selector(Class::callback2))@|当前动作，回调函数<sup><a href="javascript:void(0);" rel="popover" data-content='<pre>
+void Class::callback2(CCNode* sender)
+{
+    
+}
+</pre>' data-placement="left" data-original-title="Class::callback2">注</a></sup>|
+|@CCCallFuncND@|带参数的回调|@CCCallFuncND::actionWithTarget(this, callfuncND_selector(Class::callback3), (void*)0xbebabeba)@|当前动作，回调函数<sup><a href="javascript:void(0);" rel="popover" data-content='<pre>
+void Class::callback3(CCNode* sender, void* data)
+{
+    
+}
+</pre>' data-placement="left" data-original-title="Class::callback3">注</a></sup>|
+
 <pre class="prettyprint">
 CCSize size = CCDirector::sharedDirector()->getWinSize();           // 获取屏幕大小
 CCSprite * pSprite = CCSprite::spriteWithFile("HelloWorld.png");    // 创建精灵
 CCActionInterval * actionTo = CCMoveTo::actionWithDuration(2, CCPointMake(size.width-40, size.height-40));
 pSprite->runAction(actionTo);                                       // 运行动作
-
-CCMoveTo    // 移动
-CCMoveBy    // 移动
-
-CCScaleTo   // 缩放
-CCScaleBy   // 缩放
-
-CCSkewTo    // 倾斜
-CCSkewBy    // 倾斜
-
-CCRotateTo
-CCRotateBy
-
-CCJumpTo
-CCJumpBy
-
-CCBezierTo
-CCBezierBy
-
-Blink
-
-CCFadeIn
-CCFadeOut
-
-CCTintTo
-CCTintBy
-
-CCAnimate
-
-CCCallFunc
-CCCallFuncN
-CCCallFuncND
 </pre>
 
     <h3><small>4.2</small> 菜单</h3>
@@ -265,8 +290,84 @@ table(table table-bordered).
 |@CCPageTurn3D@|3D翻页效果|@CCPageTurn3D::actionWithSize(ccg(15,10), t)@|
 
     <h3><small>4.7</small> 节点</h3>
-    <p>@CCOrbitCamera@ ：轨道摄影机</p>
+    <p>节点嵌套节点</p>
 <pre class="prettyprint">
-CCOrbitCamera::actionWithDuration(10, 1, 0, 0, 360, 0, 0);  // 时间，起始半径，半径差，起始z角，旋转z角差，起始x角，旋转x角差
+CCSprite * pSprite1 = new CCSprite();   // 一个精灵相当于一个节点
+CCSprite * pSprite2 = new CCSprite();
+
+pSprite1->addChild(pSprite2);           // 一个节点嵌套另一个节点
+
+pSprite1->runAction(action);            // 如果父节点执行动作，那此时所有子节点都会执行该动作。
+</pre>
+
+    <p>节点删除与清除</p>
+<pre class="removeChild">
+prettyprint(node, false/true);          // 节点，false不清理正在运行的动作、true清理正在运行的动作
+</pre>
+
+    <h3><small>4.8</small> 精灵</h3>
+
+table(table table-bordered).
+|_.类|_.说明|_.静态函数|_.参数|
+|/8.@CCSprite@|/8.精灵|@CCSprite::spriteWithTexture(CCTexture2D*)@|质地|
+|@CCSprite::spriteWithTexture(CCTexture2D*, CCRect&)@|质地， @CCRect@<sup><a href="javascript:void(0);" rel="popover" data-content='<pre>
+CCRectMake(x, y, width, height);
+</pre>' data-original-title="CCRect">注</a></sup> 矩形|
+|@CCSprite::spriteWithTexture(CCTexture2D*, CCRect&, CCPoint&)@|质地，矩形， @CCPoint@<sup><a href="javascript:void(0);" rel="popover" data-content='<pre>
+CCPointMake(x, y);
+</pre>' data-original-title="CCPoint">注</a></sup> 点|
+|@CCSprite::spriteWithSpriteFrame(CCSpriteFrame*)@|@CCSpriteFrame@<sup><a href="#CCSpriteFrame" data-toggle="modal">注</a></sup> 精灵框架|
+|@CCSprite::spriteWithSpriteFrameName(char*)@|CCSpriteFrame名称|
+|@CCSprite::spriteWithFile(char*)@|文件名|
+|@CCSprite::spriteWithFile(char*, CCRect&)@|文件名，矩形|
+|@CCSprite::spriteWithBatchNode(CCSpriteBatchNode*, CCRect&)@|@CCSpriteBatchNode@<sup><a href="#CCSpriteBatchNode" data-toggle="modal">注</a></sup> 批量节点，矩形|
+|@CCSpriteBatchNode@|精灵批量节点|@CCSpriteBatchNode->addChild(CCSprite)@|添加多个精灵到节点上|
+<div id="CCSpriteFrame" class="modal hide fade" style="display: none; ">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+      <h3>CCSpriteFrame</h3>
+    </div>
+    <div class="modal-body">
+<pre>
+frameWithTexture(CCTexture2D* pobTexture, const CCRect& rect);
+frameWithTexture(CCTexture2D* pobTexture, const CCRect& rect, 
+                 bool rotated, 
+                 const CCPoint& offset, 
+                 const CCSize& originalSize);
+</pre>
+    </div>
+    <div class="modal-footer">
+      <button class="btn" data-dismiss="modal">Close</button>
+    </div>
+</div>
+
+<div id="CCSpriteBatchNode" class="modal hide fade" style="display: none; ">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+      <h3>CCSpriteBatchNode</h3>
+    </div>
+    <div class="modal-body">
+<pre>
+batchNodeWithTexture(CCTexture2D* tex);
+batchNodeWithTexture(CCTexture2D* tex, unsigned int capacity);
+batchNodeWithFile(const char* imgName);
+batchNodeWithFile(const char* imgName, unsigned int capacity);
+</pre>
+    </div>
+    <div class="modal-footer">
+      <button class="btn" data-dismiss="modal">Close</button>
+    </div>
+</div>
+
+    <h3><small>4.9</small> 定时器</h3>
+
+<pre class="prettyprint">
+schedule(schedule_selector(Class::callback), 1);   // 回调，时间；每隔1秒执行一次
+
+void Class::callback(ccTime dt) {
+    
+}
+
+unschedule(schedule_selector(Class::callback));   // 取消定时器
 </pre>
 </section>
