--- a/pages/tools/vim.textile
+++ b/pages/tools/vim.textile
@@ -1,10 +1,46 @@
 ---
 layout: default
-title: Vimss
+title: Vim
+description: 很强大的文本编辑器
 ---
 
 <section>
     <div class="page-header">
-        <h3></h3>
+        <h3>安装</h3>
     </div>
+<pre>
+$ sudo apt-get install vim vim-gtk cscope
+</pre>
+	<p>%(label label-info).vimrc%</p>
+<pre>
+set tabstop=4 " 设置tab键的宽度
+set shiftwidth=4 " 换行时行间交错使用4个空格
+set autoindent " 自动对齐
+set backspace=2 " 设置退格键可用
+set cindent shiftwidth=4 " 自动缩进4空格
+set smartindent " 智能自动缩进
+set ai! " 设置自动缩进
+set nu! " 显示行号
+set showmatch " 显示括号配对情况
+set hlsearch " 开启高亮显示结果
+set incsearch " 开启实时搜索功能
+set nowrapscan " 搜索到文件两端时不重新搜索
+"set cursorline " 突出显示当前行
+"set hidden " 允许在有未保存的修改时切换缓冲区
+"set list " 显示Tab符，使用一高亮竖线代替
+syntax enable " 打开语法高亮
+syntax on " 开启文件类型侦测
+filetype indent on " 针对不同的文件类型采用不同的缩进格式
+filetype plugin on " 针对不同的文件类型加载对应的插件
+filetype plugin indent on " 启用自动补全
+set nobackup " 设置无备份文件
+</pre>
+	<p>%(label label-info).Taglist%</p>
+<pre>
+先安装ctags：sudo apt-get install exuberant-ctags
+下载：http://www.vim.org/scripts/script.php?script_id=273
+安装：解压到 ~/.vim/
+生成帮助标签：helptags ~/.vim/doc（在Vim命令中执行）
+启动：TlistToggle（在Vim命令中执行）
+</pre>
 </section>
