--- a/pages/tools/SublimeText.textile
+++ b/pages/tools/SublimeText.textile
@@ -1,6 +1,12 @@
 ---
 layout: default
-title: Mylyn任务管理工具
+title: Sublime Text 2
 ---
 
-aaaaaaaaa
+<section>
+    <div class="page-header">
+        <h3>常用插件 <small>使用包管理工具安装</small></h3>
+    </div>
+
+    <p>DocBlockr -- 快速添加注释的插件，用法： @/**@ + @Tab@</p>
+</section>
